--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "0.1.0"
 edition = "2021"
 
 [dependencies]
+uuid = { version = "1.3", features = ["v4"] }
 tokio = { version = "1.41.1", features = ["full"] }
 tokio-tungstenite = "0.24.0"
 futures = "0.3.31"
